@@ -76,8 +76,8 @@ _MAT).")
 [[1, 3, 1], [2, 2, 1], [3, 1, 1], [4, 0, 1], [5, 3, 1], [6, 2, 1], [7, 1, 1]
 , [0, 2, 0], [1, 1, 0], [2, 0, 0], [3, 3, 0], [4, 2, 0], [5, 1, 0], [6, 0, 0
 ], [7, 3, 0], [0, 0, 1]]
-  ***   at top-level: znconreychar(G,2)
-  ***                 ^-----------------
+  ***   at top-level: znconreychar(G8,2)
+  ***                 ^------------------
   *** znconreychar: elements not coprime in znconreylog:
     2
     8
@@ -87,7 +87,7 @@ _MAT).")
 [1, 0]
 [0, 1, 0, 1]
 [-1, 1, -1, 1]
-  ***   at top-level: znconreyexp(G,[2,8,1
+  ***   at top-level: znconreyexp(znstar(1
   ***                 ^--------------------
   *** znconreyexp: incorrect type in znconreyexp (t_COL).
 [[0], [1], [3], [2]]
@@ -191,7 +191,7 @@ x^2
 0
 -1
 0
-  ***   at top-level: zncharinduce(G,[]~,3
+  ***   at top-level: zncharinduce(G2,[]~,
   ***                 ^--------------------
   *** zncharinduce: domain error in zncharinduce: N % q != 0
 [0]~
@@ -199,4 +199,4 @@ x^2
 [15, [3, 1; 5, 1]]
 [11]
 45
-Total time spent: 1418
+Total time spent: 1539
