@@ -3,7 +3,7 @@ charker(G,chi)
 charconj(G,chi)
 charorder(G,chi)
 
-G=idealstar(,100); a=[1,0];
+G=znstar(100,1); a=[1,0];
 A=znconreylog(G,a);
 m=znconreyexp(G,a);
 charker(G,a)
@@ -67,7 +67,7 @@ test(1)
 test(5)
 test(Mod(1,5))
 test(Mod(3,5))
-G = idealstar(,100);
+G = znstar(100,1);
 test([G,13])
 test([G,[0,19]~])
 test([G,[2, [1,1]]])
@@ -79,4 +79,4 @@ znchar(3)
 znchar([]~)
 znchar([1,2,3])
 znchar([1,2])
-znchar([idealstar(,100), [1,2,3]])
+znchar([znstar(100,1), [1,2,3]])
