@@ -76,24 +76,23 @@ H=[8,4,2;0,2,1;0,0,1];
 bnrchar(bnr, H, [0,1/2,1/2])
 bnrchar(bnr, H, [0,0,1/2])
 
-G=idealstar(,8);
-znconreychar(G,2) \\error
-znconreychar(G,1)
-znconreychar(G,3)
-znconreychar(G,5)
-znconreychar(G,7)
-vector(4, i, zncharisodd(G,2*i-1))
-forstep(i=1,8,2,if(znconreyexp(G, znconreylog(G, i)) != i, error(i)));
+G8=znstar(8,1);
+znconreychar(G8,2) \\error
+znconreychar(G8,1)
+znconreychar(G8,3)
+znconreychar(G8,5)
+znconreychar(G8,7)
+vector(4, i, zncharisodd(G8,2*i-1))
+forstep(i=1,8,2,if(znconreyexp(G8, znconreylog(G8, i)) != i, error(i)));
 z = [[1,-1],2];
-vector(4, i, chareval(idealstar(,8), [1,0], 1+2*i, z))
+vector(4, i, chareval(G8, [1,0], 1+2*i, z))
 
-G=idealstar(,192);
-znconreyexp(G, [2,8,1,1]~) \\ BIG
+znconreyexp(znstar(192,1), [2,8,1,1]~) \\ BIG
 
-G=idealstar(,5);
+G=znstar(5,1);
 vector(4,i,znconreychar(G,i))
 
-G=idealstar(,75);
+G=znstar(75,1);
 for(i=1, G.mod,\
   if (gcd(i,G.mod)==1 && 2*chareval(G,i,-1) != zncharisodd(G,i),error(i)))
 znconreychar(G,1)
@@ -136,26 +135,25 @@ test(G, chi)=
   N0 = znconreyconductor(G, chi, &chi0);
   if (N != N0, error(chi));
   print([N0, chi0]);
-  G0 = idealstar(,N0); L = znconreylog(G,chi);
+  G0 = znstar(N0,1); L = znconreylog(G,chi);
   if (zncharinduce(G0, chi0, G.mod) != L, error(chi));
   if (zncharinduce(G0, chi0, G) != L, error(chi));
 }
-G = idealstar(,8);
-test(G,1)
-test(G,3)
-test(G,5)
-test(G,7)
-G = idealstar(,48);
+test(G8,1)
+test(G8,3)
+test(G8,5)
+test(G8,7)
+G = znstar(48,1);
 for(i=1,48,if(gcd(i,48)==1,test(G,i)))
 
-G = idealstar(,300);
+G = znstar(300,1);
 L = znchargalois(G,2)
-G = idealstar(,96);
+G = znstar(96,1);
 znchargalois(G)
 znchargalois(G,4)
 znchargalois(G,[1,4])
 
-G = idealstar(,126000);
+G = znstar(126000,1);
 test(G,1009)
 test(G,82127)
 
@@ -166,33 +164,33 @@ l=znconreylog(G, chi)
 znconreychar(G,l) == chi
 znconreyexp(G,l)
 
-G2=idealstar(,6);
-G=idealstar(,1);
-znconreychar(G,1)
-znconreylog(G,1)
-test(G,1)
-chareval(G,[]~,1)
-chareval(G,[],1)
-chareval(G,1,1)
-zncharinduce(G,1,6)
-zncharinduce(G,1,G2)
+G6=znstar(6,1);
+G1=znstar(1,1);
+znconreychar(G1,1)
+znconreylog(G1,1)
+test(G1,1)
+chareval(G1,[]~,1)
+chareval(G1,[],1)
+chareval(G1,1,1)
+zncharinduce(G1,1,6)
+zncharinduce(G1,1,G6)
 
-G=idealstar(,2);
-znconreychar(G,1)
-znconreylog(G,1)
-test(G,1)
-chareval(G,[]~,2)
-chareval(G,[],2)
-chareval(G,[],1)
-chareval(G,1,2)
-chareval(G,1,1)
-zncharinduce(G,[]~,3)
-zncharinduce(G,1,6)
-zncharinduce(G,1,G2)
+G2=znstar(2,1);
+znconreychar(G2,1)
+znconreylog(G2,1)
+test(G2,1)
+chareval(G2,[]~,2)
+chareval(G2,[],2)
+chareval(G2,[],1)
+chareval(G2,1,2)
+chareval(G2,1,1)
+zncharinduce(G2,[]~,3)
+zncharinduce(G2,1,6)
+zncharinduce(G2,1,G6)
 
-G=idealstar(,30);
+G=znstar(30,1);
 znconreyconductor(G, 29)
 
-G=idealstar(,46);
+G=znstar(46,1);
 chi=znconreychar(G,45)
 znconreyexp(G,chi)
